# axplat-opi5p

./: .gitignore  Cargo.toml  Makefile  README.md
arceos-shell/: Cargo.toml  Makefile
arceos-shell/src/: main.rs
axplat-aarch64-opi5p/: Cargo.toml  README.md  axconfig.toml
axplat-aarch64-opi5p/src/: boot.rs  dw_apb_uart.rs  init.rs  lib.rs  mp.rs  power.rs
rstiny/: Cargo.toml  Makefile
rstiny/src/: main.rs
rstiny/src/utils/: mem.rs
tools/orangepi5/: boot.cmd  make_boot.sh  make_disk.sh  make_flash.sh  make_rootfs.sh  upload_flash.sh
tools/rknn/: README.md
