[workspace]
resolver = "2"

members = ["axplat-aarch64-opi5p", "rstiny", "arceos-shell"]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Debin Luo <luodeb@outlook.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/luodeb/axplat-opi5p"
documentation = "https://luodeb.github.io/axplat-opi5p"
repository = "https://github.com/luodeb/axplat-opi5p"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
axplat-aarch64-opi5p = { path = "axplat-aarch64-opi5p" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
